# RiskPulse

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: architecture.md  benchmarks.md
flink_jobs/: vwap_job.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.module.css  index.css
frontend/src/components/: ActivityFeed.jsx  ActivityFeed.module.css  AlertsFeed.jsx  AlertsFeed.module.css  AnswerRenderer.jsx  AnswerRenderer.module.css  Header.jsx  Header.module.css  MetricsBar.jsx  MetricsBar.module.css  PipelineStatus.jsx  PipelineStatus.module.css  PortfolioTable.jsx  PortfolioTable.module.css  RAGQueryBox.jsx  RAGQueryBox.module.css  Sparkline.jsx  Sparkline.module.css  Ticker.jsx  Ticker.module.css  VWAPChart.jsx  VWAPChart.module.css
frontend/src/hooks/: useCountUp.js  usePortfolio.js
producers/: alpaca_producer.py  portfolio_simulator.py
rag/: api.py  rag_engine.py
riskpulse_dbt/: .user.yml  dbt_project.yml  profiles.yml
riskpulse_dbt/models/marts/: fct_vwap_windows.sql  mart_portfolio_summary.sql  mart_volatility_alerts.sql  schema.yml
riskpulse_dbt/models/staging/: schema.yml  stg_risk_metrics.sql
scripts/: benchmark_duckdb.py  download_jars.sh  generate_test_data.py  setup.sh
storage/: duckdb_query.py  iceberg_lake.py
stream_jobs/: vwap_job.py
tests/: test_iceberg.py  test_producers.py  test_rag.py
